--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,12 @@ publish = false
 
 
 [dependencies]
-
+iced = { version = "0.13.1", features = ["image", "tokio"] }
+iced_aw = { version = "0.12.0" }
+tokio = { version = "1.43.0", features = ["full"] }
+reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "json"] }
+uuid = { version = "1.13.2" }
+serde_json = { version = "1.0.139" }
 
 [dev-dependencies]
 
