--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ tokio = { version = "1.43.0", features = ["full"] }
 reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "json"] }
 uuid = { version = "1.13.2", features = ["v4"] }
 serde_json = { version = "1.0.139" }
+serde = { version = "1.0.218", features = ["derive"] }
 
 
 [target.'cfg(windows)'.build-dependencies]
