--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,13 +10,21 @@ publish = false
 
 
 [dependencies]
-iced = { version = "0.13.1", features = ["image", "tokio"] }
+iced = { version = "0.13.1", features = [
+    "image",
+    "tokio",
+    "svg",
+    "canvas",
+    "multi-window",
+] }
 iced_aw = { version = "0.12.0" }
 tokio = { version = "1.43.0", features = ["full"] }
 reqwest = { version = "0.12.12", features = ["stream", "rustls-tls", "json"] }
-uuid = { version = "1.13.2", features = ["v4"] }
+uuid = { version = "1.14.0", features = ["v4", "serde"] }
 serde_json = { version = "1.0.139" }
 serde = { version = "1.0.218", features = ["derive"] }
+tracing = { version = "0.1.41" }
+tracing-subscriber = { version = "0.3.19" }
 
 
 [target.'cfg(windows)'.build-dependencies]
