--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ iced = { version = "0.13.1", features = [
     "svg",
     "canvas",
     "multi-window",
+    "markdown",
 ] }
 iced_aw = { version = "0.12.0" }
 tokio = { version = "1.43.0", features = ["full"] }
@@ -25,6 +26,7 @@ serde_json = { version = "1.0.139" }
 serde = { version = "1.0.218", features = ["derive"] }
 tracing = { version = "0.1.41" }
 tracing-subscriber = { version = "0.3.19" }
+iced_widget = { version = "0.13.4", features = ["markdown"] }
 
 
 [target.'cfg(windows)'.build-dependencies]
