removed cSpell.words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,7 +11,5 @@
     ],
     "rust-analyzer.showUnlinkedFileNotification": false,
     "rust-analyzer.check.allTargets": false,
-    "cSpell.words": [
-        "clippy"
-    ],
+    "cSpell.words": [],
 }
