--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ reqwest = { version = "0.12.12", default-features = false, features = [
     "stream",
     "rustls-tls",
     "json",
+    "blocking",
 ] }
 uuid = { version = "1.14.0", features = ["v4", "serde"] }
 serde_json = { version = "1.0.139" }
